--- a/app/src/main/res/layout/earthquake_activity.xml
+++ b/app/src/main/res/layout/earthquake_activity.xml
@@ -33,4 +33,11 @@ android:gravity="center"
 android:visibility="gone"
 android:text="NO DATA AVAILABLE" />
 
+    <ProgressBar
+        android:id="@+id/loading_spinner"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
