--- a/app/src/main/res/layout/layout_movie.xml
+++ b/app/src/main/res/layout/layout_movie.xml
@@ -126,6 +126,7 @@
                 <Button
                         android:layout_alignParentRight="true"
                         android:text="Book"
+                        android:layout_toLeftOf="@id/textViewTitle"
                         android:layout_centerVertical="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
