--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,13 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context="chromicle.recycleViewExample.MainActivity">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <com.baoyz.widget.PullRefreshLayout
+
             android:id="@+id/refreshLayout"
+            app:refreshType="circles"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -16,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </com.baoyz.widget.PullRefreshLayout>
 
 
 </RelativeLayout>
